--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
          git add .
          git commit -m "update today's wallpaper"
       - name: Push changes
-        uses:  ad-m/github-push-action@main
+        uses:  ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.MY_GIT_TOKEN }}
           branch: main
