--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
          git config --local user.email "123354572+CollapseEdge@users.noreply.github.com"
          git config --local user.name "CollapseEdge"
          git pull
-         git add ./code/data.json
+         git add README.md
          git commit -m "update today's wallpaper"
       - name: Push changes
         uses:  ad-m/github-push-action@master
