--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,9 +24,9 @@ jobs:
         run: |
          git config --local user.email "123354572+CollapseEdge@users.noreply.github.com"
          git config --local user.name "CollapseEdge"
-         git pull
-         git add README.md
+         git add .
          git commit -m "update today's wallpaper"
+         git pull
       - name: Push changes
         uses:  ad-m/github-push-action@master
         with:
