--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,9 +26,9 @@ jobs:
          git config --local user.name "CollapseEdge"
          git add .
          git commit -m "update today's wallpaper"
+         git pull
       - name: Push changes
         uses:  ad-m/github-push-action@master
         with:
-          github_token: ${{ secrets.MY_GIT_TOKEN }}
-          branch: main
-
+         github_token: ${{ secrets.MY_GIT_TOKEN }}
+         branch: main
