--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,12 +24,10 @@ jobs:
         run: |
          git config --local user.email "123354572+CollapseEdge@users.noreply.github.com"
          git config --local user.name "CollapseEdge"
-         git pull
          git add .
-         git commit -m "update today's wallpaper"
+         git commit -m "update todey's wallpaper"
       - name: Push changes
         uses:  ad-m/github-push-action@master
         with:
          github_token: ${{ secrets.MY_GIT_TOKEN }}
          branch: main
-         force: true
