--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,7 @@ jobs:
         run: |
          git config --local user.email "123354572+CollapseEdge@users.noreply.github.com"
          git config --local user.name "CollapseEdge"
+         git add .
          git commit -m "update todey's wallpaper"
       - name: Push changes
         uses:  ad-m/github-push-action@master
