--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,9 @@
 name: 'GitHub Actions BingWallpaper'
 
 on:
-  push:
-    branches: 
-      - main
+  #push:
+    #branches: 
+      #- main
   schedule:
       - cron: '5 0 * * *'
 jobs:
