--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,8 @@ on:
     #branches: 
       #- main
   schedule:
-      - cron: '5 0 * * *'
+    # * is a special character in YAML so you have to quote this string
+    - cron:  '0 9 * * *'
 jobs:
   BingWallpaperBot:
     runs-on: ubuntu-latest
