--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,9 +4,9 @@ on:
   #push:
     #branches: 
       #- main
-  schedule:
+  #schedule:
     # * is a special character in YAML so you have to quote this string
-    - cron:  '0 9 * * *'
+    # - cron:  '0 9 * * *'
 jobs:
   BingWallpaperBot:
     runs-on: ubuntu-latest
